# ohtu-miniprojekti

./: .coveragerc  .gitignore  .pylintrc  LICENSE  LOPPURAPORTTI.md  README.md  add_all_type_of_tips.robot  pyproject.toml  tasks.py
.github/workflows/: main.yml
data/: reading_tips_database.db
dokumentaatio/: definition_of_done.md  ui-luonnos.md
src/: LukuvinkkiAppLibrary.py  ReadingTipAppLibrary.py  console_io.py  database_connection.py  index.py  initialize_database.py  lukuvinkki_app.py  mock_io.py  reading_tip_app.py
src/entities/: blogpost_tip.py  book_tip.py  content.py  podcast_tip.py  reading_tip.py  tip_types.py  video_tip.py
src/repositories/: tips_repository.py
src/services/: reading_tip_factory.py  reading_tip_service.py
src/tests/: add_all_type_of_tips.robot  add_details_to_tips.robot  add_new_tip.robot  add_tips_type.robot  browse_tips.robot  mock_io_test.py  reading_tip_service_test.py  remove_tip.robot  resource.robot  skeleton.robot  tips_repository_test.py
src/tests/entities/: blogpost_tip_test.py  book_tip_test.py  content_test.py  podcast_tip_test.py  reading_tip_test.py  video_tip_test.py
src/tests/repositories/: tips_repository_test.py
src/tests/services/: reading_tip_factory_test.py  reading_tip_service_test.py
src/ui/: add_new_tip_command.py  base_command.py  browse_commands.py  command_factory.py  commands.py  tip_printer.py  ui.py
