[tool.poetry]
name = "ohtu-miniprojekti"
version = "0.1.0"
description = "Lukuvinkkikirjasto"
authors = ["Roni Tammisalo <81182631+rtammisalo@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
pytest = "^6.2.5"
coverage = "^6.1.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
